--- a/main.html
+++ b/main.html
@@ -8,6 +8,41 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+		<table width="50" height="50%" border="2">
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>jiya</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>jaya</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>riya</td>
+			</tr>
+			</tbody>
+			
+		</table>
+		<h2>List of medias</h2>
+			<ol>
+				<li><img src="https://picsum.photos/id/123/200/300"></li>
+				<li><video control>
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				</video></li>
+				<li><audio controls>
+					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+				
+			</ol>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
