--- a/main.html
+++ b/main.html
@@ -34,12 +34,15 @@
 		</table>
 		<h2>List of medias</h2>
 			<ol>
-				<li><img src="https://picsum.photos/id/123/200/300"></li>
-				<li><video control>
+				<li><img src="https://picsum.photos/id/123/200/300" alt="Image"></li>
+				<li>
+					<video control>
 					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 				</video></li>
-				<li><audio controls>
-					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+				<li>
+					<audio controls>
+					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+					</audio></li>
 				
 			</ol>
 	
