--- a/main.html
+++ b/main.html
@@ -34,12 +34,14 @@
 		</table>
 		<h2>List of medias</h2>
 			<ol>
-				<li><img src="https://picsum.photos/id/123/200/300" alt="Image"></li>
-				<li>
+				<li>First Item
+					<img src="https://picsum.photos/id/123/200/300" alt="">
+				</li>
+				<li>Second Item
 					<video control>
 					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 				</video></li>
-				<li>
+				<li>Third Item
 					<audio controls>
 					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 					</audio></li>
